# image-classification-with-dl

./: .cursorrules  .gitignore  README.md  TASK.md  main.py  models.py  pyproject.toml  utils.py
result/: cnn_model.pth
